feat: add unit test coverage

--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "vue-unit-test-demo",
   "version": "1.0.0",
   "description": "vue-unit-test-demo",
-  "main": "index.js",
   "scripts": {
     "test": "mocha-webpack --webpack-config webpack.test.js --require test/setup.js test/*.spec.js",
-    "mocha": "mocha test/*.test.js"
+    "cover": "nyc --reporter=lcov --reporter=text npm run test"
   },
-  "keywords": [],
-  "author": "",
+  "author": "babytutu",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -19,15 +17,24 @@
     "css-loader": "^1.0.0",
     "expect": "^23.3.0",
     "file-loader": "^1.1.11",
+    "istanbul-instrumenter-loader": "^3.0.1",
     "jsdom": "^11.11.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^5.2.0",
     "mocha-webpack": "^2.0.0-beta.0",
+    "nyc": "^12.0.2",
     "vue": "^2.5.16",
     "vue-loader": "^14.2.3",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.15.1",
     "webpack-dev-server": "^3.1.4",
     "webpack-node-externals": "^1.7.2"
+  },
+  "nyc": {
+    "include": [
+      "src/**/*.(js|vue)"
+    ],
+    "instrument": false,
+    "sourceMap": false
   }
 }
