--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,20 @@
 {
-  "presets": ["env","stage-0"]
+  "env": {
+    "development": {
+      "presets": [
+        ["env", { "modules": false }],
+        "stage-0"
+      ]
+    },
+    "test": {
+      "presets": [
+        ["env", {
+          "modules": false,
+          "targets": { "node": "current" }
+        }],
+        "stage-0"
+      ],
+      "plugins": ["istanbul"]
+    }
+  }
 }
